[package]
name = "threadpooler"
version = "0.1.0"
authors = ["Jack Thomsoon"]

[dependencies]
sys-info = "0.5.8" 
crossbeam-channel = "0.4"
parking_lot = "0.11.0"
crossbeam-utils = "0.7.2"

[dev-dependencies]
rayon = "1.3.1"
criterion = "0.3"
criterion_bencher_compat = "0.3"
rayoff = { git = "https://github.com/aeyakovenko/rayoff" }

[lib]
crate-type = ["lib"]
name = "threadpooler"

[profile.release]
debug = true

[[bench]]                                           
name = "rayoff"
harness = false

[[bench]]                                           
name = "heavywork"
harness = false