[package]
name = "threadpooler"
version = "0.1.0"
edition = "2018"
authors = ["Jack Thomsoon"]

[dependencies]
num_cpus  = "1.13.0" 
crossbeam-channel = "0.4"
crossbeam-deque = "0.7.3"
parking_lot = "0.11.0"
criterion = "0.3"
smallvec = "1.4.2"

[dev-dependencies]
rayon = "= 1.4.1"
criterion_bencher_compat = "0.3"
rayoff = { git = "https://github.com/aeyakovenko/rayoff" }

[lib]
crate-type = ["lib"]
name = "threadpooler"

[profile.release]
debug = true

[profile.bench]
lto = 'fat'
codegen-units = 1

[[bench]]                                           
name = "rayoff"
harness = false

[[bench]]                                           
name = "atomic"
harness = false
